[package]
name = "evm-abci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abci-rs = { version = "0.11.3", features = ["async-api"] }
async-trait = "0.1.56"
alloy = { version = "0.6.1", features = ["full"] }
alloy-signer = "0.6.1"
alloy-rpc-client = "0.6.1"
alloy-primitives = "0.8.11"
alloy-signer-local = { version = "0.6.1",features = ["mnemonic"] }
eyre = "0.6.12"
hex = "0.4.3"
serde_json = "1.0.82"
tokio = { version = "1.41.0", features = ["macros"] }
clap = { version = "4.5.20", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
clap_complete = "4.5.36"
foundry-evm = { git = "https://github.com/foundry-rs/foundry" }
foundry-common = { git = "https://github.com/foundry-rs/foundry" }
serde = { version = "1.0.138", features = ["derive"] }
reqwest = "0.11.11"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
tracing-error = "0.2.0"
yansi = "1.0.1"
once_cell = "1.13.0"
tokio-util = { version = "0.7.12" , features = ["codec"]}
futures = "0.3.31"
