[package]
name = "narwhal-abci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4", features = ["full"] }
tokio-util = { version = "0.7", features= ["codec"] }
warp = "0.3.2"
rocksdb = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.11"
futures = "0.3.15"
eyre = "0.6.8"

bincode = "1.3.3"
hex = "0.4.3"

tendermint-abci = { version = "0.23.7", features = ["client"] }
tendermint-proto = "0.23.7"

narwhal_primary = { package = "primary", path = "../../narwhal/primary" }
narwhal_crypto = { package = "crypto", path = "../../narwhal/crypto" }
serde_json = "1.0.82"

alloy = { version = "0.6.1", features = ["full"] }
alloy-signer = "0.6.1"
alloy-rpc-client = "0.6.1"
alloy-primitives = "0.8.11"
alloy-signer-local = { version = "0.6.1",features = ["mnemonic"] }
once_cell = "1.20.2"
