[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4", features = ["full"] }
tokio-util = { version = "0.7", features= ["codec"] }
clap = "2.33.3"
env_logger = "0.7.1"
log = "0.4.11"
bytes = "1.0.1"
bincode = "1.3.1"
rand = "0.7.3"
futures = "0.3.15"
tendermint-abci = { version = "0.23.7", features = ["client"] }
tendermint-proto = "0.23.7"

config = { path = "../../narwhal/config" }
store = { path = "../../narwhal/store" }
crypto = { path = "../../narwhal/crypto" }
primary = { path = "../../narwhal/primary" }
worker = { path = "../../narwhal/worker" }
consensus = { path = "../../narwhal/consensus" }

hex = "0.4.3"
serde_json = "1.0.82"
reqwest = "0.11.11"

rocksdb = "0.22.0"
warp = "0.3.2"
serde = { version = "1.0", features = ["derive"] }

narwhal-abci = { path = "../narwhal-abci" }
eyre = "0.6.8"
